--- a/src/ObiOne/appsettings.json
+++ b/src/ObiOne/appsettings.json
@@ -9,7 +9,8 @@
   },
   "AppPath": {
     "PictTempPath": "C:\\inetpub\\wwwroot\\ObiOne_Img\\Temp",
-    "ExceptionPath": "C:\\inetpub\\ExceptionLog\\Risshi"
+    "PictPath": "C:\\inetpub\\wwwroot\\ObiOne_Img\\Pict",
+    "SqlitePath": "C:\\Users\\Masataka\\Desktop\\ObiOneDb.db"
   },
-  "RootAddress": "192.168.11.4"
+  "RootAddress": "localhost"
 }
