--- a/src/ObiOne/bower.json
+++ b/src/ObiOne/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "~1.4.7",
     "easeljs": "*",
-    "tweenjs": "*"
+    "tweenjs": "*",
+    "ui-router": "*"
   }
 }
